--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "rootDir": "./package",         
     "declaration": true,            
     "declarationMap": true,         
-    "sourceMap": true               
+    "sourceMap": true,
+    "lib": ["ES2020", "DOM"]              
   },
   "include": ["package/**/*"]       
 }
