--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@fabric-devel/fabric-api",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Discord lib for you.",
   "main": "./dist/exports.js",
   "module": "./dist/exports.js",
   "exports": {
     ".": {
       "import": "./dist/export.js",
-      "require": "./dist/export.cjs",
+      "require": "./dist/export.js",
       "types": "./dist/export.d.ts"
     }
   },
