--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,24 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
+    "module": "ESNext",
+    "moduleResolution": "node",
+
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true,
-    "allowJs": true,
-    "checkJs": false,
-    "noEmit": false,                
-    "outDir": "./dist",             
-    "rootDir": "./package",         
-    "declaration": true,            
-    "declarationMap": true,         
+
+    "rootDir": "./package",
+    "outDir": "./dist",
+
+    "declaration": true,
+    "declarationMap": true,
     "sourceMap": true,
-    "lib": ["ES2020", "DOM"]              
+
+    "allowJs": false,
+    "noEmit": false,
+
+    "lib": ["ES2020"]
   },
-  "include": ["package/**/*"]       
+  "include": ["package/**/*"]
 }
